move default build dir into /docs

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,8 @@ languageCode: en-us
 title: fhrzn
 theme: "PaperMod"
 
+publishDir: "docs"
+
 params:
     ShowReadingTime: true
     ShowShareButtons: true
