--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: 'https://fhrzn.github.io/'
 languageCode: en-us
 paginate: 10
-title: Fahrizain's Site
+title: Fahrizain
 theme: "PaperMod"
 
 publishDir: "docs"
@@ -16,6 +16,7 @@ params:
     ShowRssButtonInSectionTermList: true
 
     author: "Affandy Fahrizain"
+    comments: true
 
     cover:
       hiddenInList: true # hide on list pages and home
