recreate the repos

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -17,6 +17,8 @@ params:
 
     author: "Affandy Fahrizain"
     comments: true
+    label:
+      icon: "favicon.ico"
 
     cover:
       hiddenInList: true # hide on list pages and home
